2002-03-11  WATANABE Katsuyuki <katsuyuki_1.watanabe@toppan.co.jp>

	* [w3m-dev 03110] Re: gopher broken
	* file.c (loadGeneralFile): #ifdef USE_GOPHER

2002-03-11  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03106] Re: displayBuffer
	* display.c (displayBuffer): revert previous changes
	* file.c (process_img): remove space in src attribute

2002-03-10  Rei FURUKAWA <furukawa@tcp-ip.or.jp>

	* [w3m-dev 03096] displayBuffer 
	* display.c (displayBuffer): buf->need_reshape = 0 to prevent recursive
			displayBuffer calls

2002-03-09  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03095] Re: gopher broken 
		(Re: Bug#137287: w3m: segfault on gopher://xxxx.xxx URI)
	* file.c (loadGopherDir): html_quote(url_quote_conv())

2002-03-09  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03092] Reload image
	* file.c (loadImageBuffer): cache->index = 0

2002-03-09  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03093] Re: gopher broken 
		(Re: Bug#137287: w3m: segfault on gopher://xxxx.xxx URI)
	* file.c (loadGopherDir): fix ->ptr
		q should be url_quote()
	* url.c (openURL): url_unquote() for gopher selector

2002-03-09  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03090] Re: gopher broken 
		(Re: Bug#137287: w3m: segfault on gopher://xxxx.xxx URI)
	* file.c (loadGeneralFile): if loadGopherDir, type is real_type
	* file.c (loadGopherDir): rewrite to use loadHTMLstream()

2002-03-08  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03088] gopher broken 
		(Re: Bug#137287: w3m: segfault on gopher://xxxx.xxx URI)
	* file.c (form_max): initial value should be -1
	* file.c (loadGopherDir): </A>

2002-03-08  YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>

	* [w3m-dev 03087] vi +1 emptyfile
	* etc.c (myEditor): line > 1

2002-03-06  Christian Weisgerber <w3m-dev-en@mips.inka.de>

	* [w3m-dev-en 00699]
	* configure: define SETPGRP() instead of setpgrp()
	* etc.c (mySystem): use SETPGRP() instead of setpgrp()
	* image.c (openImgdisplay): ditto