@@ -2470,6 +2470,9 @@ flushline(struct html_feed_environ *h_env, struct readbuffer *obuf, int indent,
 	else if (RB_GET_ALIGN(obuf) == RB_RIGHT) {
 	    align(lbuf, width, ALIGN_RIGHT);
 	}
+	else if (RB_GET_ALIGN(obuf) == RB_LEFT && obuf->flag & RB_INTABLE) {
+	    align(lbuf, width, ALIGN_LEFT);
+	}
 #ifdef FORMAT_NICE
 	else if (obuf->flag & RB_FILL) {
 	    char *p;
